packages/preview/elsearticle/3.0.0/README.md
# elsearticle template

[![Generic badge](https://img.shields.io/badge/Version-3.0.0-cornflowerblue.svg)](https://img.shields.io/badge/Version-3.0.0-cornflowerblue.svg)
[![MIT License](https://img.shields.io/badge/License-MIT-forestgreen)](https://github.com/maucejo/elsearticle/blob/179d1f389c98bb69e53c52619cf06dd8a92746d0/LICENSE)
[![User Manual](https://img.shields.io/badge/doc-.pdf-mediumpurple)](https://github.com/maucejo/elsearticle/blob/179d1f389c98bb69e53c52619cf06dd8a92746d0/docs/manual.pdf)

`elsearticle` is a Typst template that aims to mimic the Elsevier article LaTeX class, a.k.a. `elsarticle.cls`, provided by Elsevier to format manuscript properly for submission to their journals.

## Basic usage

This section provides the minimal amount of information to get started with the template. For more detailed information, see the [manual](https://github.com/maucejo/elsearticle/blob/179d1f389c98bb69e53c52619cf06dd8a92746d0/docs/manual.pdf).

To use the `elsearticle` template, you need to include the following line at the beginning of your `typ` file:

```typ
#import "@preview/elsearticle:3.0.0": *
```

### Initializing the template

After importing `elsearticle`, you have to initialize the template by a show rule with the `#elsearticle()` command. This function takes an optional argument to specify the title of the document.

* `title`: Title of the paper
* `authors`: List of the authors of the paper
* `affiliations`: List of the affiliations of the authors
* `abstract`: Abstract of the paper
* `journal`: Name of the journal
* `keywords`: List of keywords of the paper
* `format`: Format of the paper. Possible values are `preprint`, `review`, `1p`, `3p`, `5p`
* `paper`: Paper size. Possible values are `"a4"`, `"ansi-a"`, `"us-letter"` and `"us-legal"`
* `numcol`: Number of columns of the paper. Possible values are 1 and 2
* `line-numbering`: Enable line numbering. Possible values are `true` and `false`

## Additional features

The `elsearticle` template provides additional features to help you format your document properly.

### Appendix

To activate the appendix environment, all you have to do is to place the following command in your document:
```typ
#show: appendix

// Appendix content here
```

### Subfigures

Subfigures are not built-in features of Typst, but the `elsearticle` template provides a way to handle them. It is based on the `subpar` package that allows you to create subfigures and properly reference them.

```typ
  #subfigure(
    figure(image("image1.png"), caption: []), <figa>,
    figure(image("image2.png"), caption: []), <figb>,
    columns: (1fr, 1fr),
    caption: [(a) Left image and (b) Right image],
    label: <fig>
  )
```

### Unnumbered sections and equations

In some cases, you may want to create unnumbered sections or equations. The #package[elsearticle] template provides a way to do this using the `selector` function and dedicated #dtype(label). The latter can be used as follows:

```typ
// Unnumbered section
= Introduction <nonum-sec>

// Unnumbered equation
$
y = f(x)
$ <nonum-eq>
```

## License
MIT licensed

Copyright (C) 2026 Mathieu AUCEJO and contributors (maucejo)